--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
 </head>
 
 <body>
-	<dir style="width: 566px">
+	<div>
 		<h1>Filipova fan stranica</h1>
+		<img href="filip.jpg" height="545" src="filip.jpg" width="529" class="auto-style1"></img>
 
-
-		<img href="filip.jpg" height="545" src="filip.jpg" width="529" class="auto-style1">
-		</img>
-	</dir>
+	</div>
 	<p style="left: -562px; top: -602px; width: 220px; height: 269px;">Filip čovjek veći od najvećeg, zvijezda
 		Brodsko-posavske košarke</p>
 	<h3 style="position: relative; left: -312px; top: -878px; width: 281px;">Prosjek poena po utakmici: 42</h3>
