--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
 <body>
 	<div>
 		<h1>Filipova fan stranica</h1>
-		<img href="filip.jpg" height="545" src="filip.jpg" width="529" class="auto-style1"></img>
+		<img href="filipsvjetionik.jpg" src="filipsvjetionik.jpg" class="auto-style1"></img>
 
 	</div>
-	<p style="left: -562px; top: -602px; width: 220px; height: 269px;">Filip čovjek veći od najvećeg, zvijezda
-		Brodsko-posavske košarke</p>
-	<h3 style="position: relative; left: -312px; top: -878px; width: 281px;">Prosjek poena po utakmici: 42</h3>
+	<p>Čovjek sa srcem</p>
+	<div class="video">
+		<video width="250px" height="500px" controls="muted">
+
+			<source src="filip-suda-kisobran.ogg" type="video/mp4">
+		</video>
+	</div>
 </body>
 
 </html>
