--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<img href="filipsvjetionik.jpg" src="filipsvjetionik.jpg" class="auto-style1"></img>
 
 	</div>
-	<p></p>
+	<p>Čovjek sa srcem</p>
 	<div class="video">
 		<video width="250px" height="500px" controls="muted">
 
