--- a/index.html
+++ b/index.html
@@ -22,5 +22,8 @@
 		</video>
 	</div>
 </body>
+<iframe src="https://open.spotify.com/embed/playlist/37i9dQZF1DWSV3Tk4GO2fq?utm_source=generator&theme=0" width="50%"
+	height="380" frameBorder="0" allowfullscreen=""
+	allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
 </html>
