--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>something</title>
+	<title>Najbolja stranica Slavonije</title>
 </head>
 
 <body>
